--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,7 +19,9 @@ div {
     border-radius: 8px;
     height: auto;
     display: grid;
-    grid-template-rows: repeat(1fr, 7);
+    grid-template-rows: repeat(7, autofill);
+    justify-content: space-between;
+    margin: 0;
 }
 
 .section-profile ul {
