--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,7 +19,7 @@ div {
     border-radius: 8px;
     height: auto;
     display: grid;
-    grid-template-rows: repeat(7, autofill);
+    grid-template-rows: repeat(7, 1fr);
     justify-content: space-between;
     margin: 0;
 }
@@ -31,3 +31,5 @@ div {
     text-decoration: none;
     list-style: none;
 }
+
+
