--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,22 +9,16 @@
 
 body {
     font-family: var(--rubik-font);
-}
-
-div {
-    border: 2px red solid;
-    min-width: 310px;
-    width: 320px;
-    max-width: 450px;
-    border-radius: 8px;
-    height: auto;
     display: grid;
     grid-template-rows: repeat(7, 1fr);
-    justify-content: space-between;
-    margin: 0;
+    justify-content: center;
+}
+div {
+    background-color: var(--);
+    border-radius: 8px;
 }
 
-.section-profile ul {
+.section-profile button {
     display: flex;
     text-align: center;
     justify-content: space-between;
