--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,9 +12,11 @@ body {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
     justify-content: center;
+    background-color: var(--blue-very-dark-neutral);
+    color: #ffffff;
 }
 div {
-    background-color: var(--);
+    /* background-color: var(--blue); */
     border-radius: 8px;
 }
 
