setting the card of the categories

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -16,8 +16,36 @@ body {
     color: #ffffff;
 }
 div {
-    /* background-color: var(--blue); */
     border-radius: 8px;
+}
+
+.section-profile {
+    display: flex;
+
+}
+
+.container-task {
+    display: grid;
+    position: relative;
+    background-color: white;
+    min-width: 300px;
+    max-width: 770px;
+    width: 300px;
+    height: 150px;
+    margin-bottom: 170px;
+}
+
+.div-task {
+    position: absolute;
+    background-color: red;
+    width: inherit;
+    height: 150px;
+    top: 50px;
+    margin-top: 16px;
+}
+.div-task div {
+    display: grid;
+    color: seagreen;
 }
 
 .section-profile button {
