colors and background images fixed on the background of the principal container
Using the json data base i use it to complete the challenge on this part

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -101,8 +101,9 @@ body {
     border-radius: 16px;
     margin-bottom: 24px;
     background-repeat: no-repeat;
-    background-size: contain;
-    background-position:right;
+    background-size: 70px;
+    background-position: right;
+    background-position-y: -15px;
 }
 
 
