--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,8 +11,10 @@ body {
     font-family: var(--rubik-font);
     display: grid;
     grid-template-rows: repeat(7, 250px);
-    gap: 24px;
+    gap: 25px;
     justify-items: center;
+    justify-content: center;
+    align-items: center;
     background-color: var(--blue-very-dark-neutral);
     color: #ffffff;
 }
@@ -100,6 +102,7 @@ body {
     max-width: 770px;
     width: 300px;
     border-radius: 16px;
+
     margin-bottom: 24px;
     background-repeat: no-repeat;
     background-size: 70px;
